--- a/Sequences, Time Series and Prediction/S+P_Week_2_Lesson_1.ipynb
+++ b/Sequences, Time Series and Prediction/S+P_Week_2_Lesson_1.ipynb
@@ -29,24 +29,69 @@
       "metadata": {
         "id": "D1J15Vh_1Jih",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 661
+        },
+        "outputId": "313d035d-dd66-4a47-e721-08936188fde7"
       },
       "source": [
-        "!pip install tf-nightly-2.0-preview\n",
-        "\n"
+        "#!pip install tf-nightly-2.0-preview\n",
+        "!pip install tensorflow-gpu==2.0.0"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: tensorflow-gpu==2.0.0 in /usr/local/lib/python3.6/dist-packages (2.0.0)\n",
+            "Requirement already satisfied: tensorflow-estimator<2.1.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (2.0.1)\n",
+            "Requirement already satisfied: keras-preprocessing>=1.0.5 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.1.0)\n",
+            "Requirement already satisfied: numpy<2.0,>=1.16.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.17.4)\n",
+            "Requirement already satisfied: grpcio>=1.8.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.15.0)\n",
+            "Requirement already satisfied: keras-applications>=1.0.8 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.0.8)\n",
+            "Requirement already satisfied: tensorboard<2.1.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (2.0.2)\n",
+            "Requirement already satisfied: wheel>=0.26 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (0.33.6)\n",
+            "Requirement already satisfied: google-pasta>=0.1.6 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (0.1.8)\n",
+            "Requirement already satisfied: opt-einsum>=2.3.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (3.1.0)\n",
+            "Requirement already satisfied: protobuf>=3.6.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (3.10.0)\n",
+            "Requirement already satisfied: termcolor>=1.1.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.1.0)\n",
+            "Requirement already satisfied: absl-py>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (0.8.1)\n",
+            "Requirement already satisfied: wrapt>=1.11.1 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.11.2)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (1.12.0)\n",
+            "Requirement already satisfied: gast==0.2.2 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (0.2.2)\n",
+            "Requirement already satisfied: astor>=0.6.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-gpu==2.0.0) (0.8.1)\n",
+            "Requirement already satisfied: h5py in /usr/local/lib/python3.6/dist-packages (from keras-applications>=1.0.8->tensorflow-gpu==2.0.0) (2.8.0)\n",
+            "Requirement already satisfied: google-auth-oauthlib<0.5,>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.4.1)\n",
+            "Requirement already satisfied: setuptools>=41.0.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (42.0.2)\n",
+            "Requirement already satisfied: google-auth<2,>=1.6.3 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (1.10.0)\n",
+            "Requirement already satisfied: markdown>=2.6.8 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (3.1.1)\n",
+            "Requirement already satisfied: werkzeug>=0.11.15 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.16.0)\n",
+            "Requirement already satisfied: requests<3,>=2.21.0 in /usr/local/lib/python3.6/dist-packages (from tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (2.21.0)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.6/dist-packages (from google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (1.3.0)\n",
+            "Requirement already satisfied: cachetools<5.0,>=2.0.0 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (4.0.0)\n",
+            "Requirement already satisfied: rsa<4.1,>=3.1.4 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (4.0)\n",
+            "Requirement already satisfied: pyasn1-modules>=0.2.1 in /usr/local/lib/python3.6/dist-packages (from google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.2.7)\n",
+            "Requirement already satisfied: urllib3<1.25,>=1.21.1 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (2019.11.28)\n",
+            "Requirement already satisfied: idna<2.9,>=2.5 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (2.8)\n",
+            "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /usr/local/lib/python3.6/dist-packages (from requests<3,>=2.21.0->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (3.0.4)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.6/dist-packages (from requests-oauthlib>=0.7.0->google-auth-oauthlib<0.5,>=0.4.1->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (3.1.0)\n",
+            "Requirement already satisfied: pyasn1>=0.1.3 in /usr/local/lib/python3.6/dist-packages (from rsa<4.1,>=3.1.4->google-auth<2,>=1.6.3->tensorboard<2.1.0,>=2.0.0->tensorflow-gpu==2.0.0) (0.4.8)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "BOjujz601HcS",
         "colab_type": "code",
-        "outputId": "696f1e32-8728-48b4-88bf-389a3dfbb914",
+        "outputId": "96e795ee-984a-4619-d0f6-9e2bd03918fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 35
         }
       },
       "source": [
@@ -55,12 +100,12 @@
         "import matplotlib.pyplot as plt\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2.0.0-dev20190628\n"
+            "2.0.0\n"
           ],
           "name": "stdout"
         }
@@ -71,10 +116,10 @@
       "metadata": {
         "id": "asEdslR_05O_",
         "colab_type": "code",
-        "outputId": "d4de27e8-18c5-44fe-d096-30499650df0b",
+        "outputId": "17aed848-d7ad-411a-bb55-911fd3016929",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 188
+          "height": 201
         }
       },
       "source": [
@@ -82,7 +127,7 @@
         "for val in dataset:\n",
         "   print(val.numpy())"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -107,10 +152,10 @@
       "metadata": {
         "id": "Lrv_ghSt1lgQ",
         "colab_type": "code",
-        "outputId": "81190d2d-259e-452e-cf48-23915dc782fd",
+        "outputId": "814cf953-8eb0-4159-8d68-d93a0387de90",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 188
+          "height": 201
         }
       },
       "source": [
@@ -121,7 +166,7 @@
         "    print(val.numpy(), end=\" \")\n",
         "  print()"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,10 +191,10 @@
       "metadata": {
         "id": "QLEq6MG-2DN2",
         "colab_type": "code",
-        "outputId": "ff6dc0fa-a880-4ed5-ea6b-bfdc11b727c7",
+        "outputId": "ffbfc674-07e6-46b8-d79a-831a85c47d89",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120
+          "height": 127
         }
       },
       "source": [
@@ -160,7 +205,7 @@
         "    print(val.numpy(), end=\" \")\n",
         "  print()"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,10 +226,10 @@
       "metadata": {
         "id": "PJ9CAHlJ2ODe",
         "colab_type": "code",
-        "outputId": "ae088296-428d-4985-92da-74292670bc68",
+        "outputId": "8ba421d1-a388-4730-846a-a28e26710f94",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120
+          "height": 127
         }
       },
       "source": [
@@ -194,7 +239,7 @@
         "for window in dataset:\n",
         "  print(window.numpy())\n"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,10 +260,10 @@
       "metadata": {
         "id": "DryEZ2Mz2nNV",
         "colab_type": "code",
-        "outputId": "f25de11e-abce-4d18-cd41-7c45a6323875",
+        "outputId": "7f9d93ec-ed03-4513-fe2a-8fada8eb0c6f",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120
+          "height": 127
         }
       },
       "source": [
@@ -229,7 +274,7 @@
         "for x,y in dataset:\n",
         "  print(x.numpy(), y.numpy())"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -250,10 +295,10 @@
       "metadata": {
         "id": "1tl-0BOKkEtk",
         "colab_type": "code",
-        "outputId": "a96d8eec-4937-4c07-f8f1-9e137492eb8b",
+        "outputId": "f8432065-b60b-44c6-a46d-4068b558e756",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 120
+          "height": 127
         }
       },
       "source": [
@@ -265,17 +310,17 @@
         "for x,y in dataset:\n",
         "  print(x.numpy(), y.numpy())\n"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1 2 3 4] [5]\n",
-            "[3 4 5 6] [7]\n",
-            "[4 5 6 7] [8]\n",
             "[5 6 7 8] [9]\n",
             "[0 1 2 3] [4]\n",
-            "[2 3 4 5] [6]\n"
+            "[1 2 3 4] [5]\n",
+            "[2 3 4 5] [6]\n",
+            "[4 5 6 7] [8]\n",
+            "[3 4 5 6] [7]\n"
           ],
           "name": "stdout"
         }
@@ -286,10 +331,10 @@
       "metadata": {
         "id": "Wa0PNwxMGapy",
         "colab_type": "code",
-        "outputId": "d12e37ee-fb71-4284-c615-b8c568e34630",
+        "outputId": "96c6021a-af62-482c-ffb4-271c614b9dcc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 223
+          "height": 237
         }
       },
       "source": [
@@ -303,27 +348,40 @@
         "  print(\"x = \", x.numpy())\n",
         "  print(\"y = \", y.numpy())\n"
       ],
-      "execution_count": 0,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "x =  [[5 6 7 8]\n",
+            " [3 4 5 6]]\n",
+            "y =  [[9]\n",
+            " [7]]\n",
+            "x =  [[1 2 3 4]\n",
+            " [2 3 4 5]]\n",
+            "y =  [[5]\n",
+            " [6]]\n",
             "x =  [[0 1 2 3]\n",
             " [4 5 6 7]]\n",
             "y =  [[4]\n",
-            " [8]]\n",
-            "x =  [[2 3 4 5]\n",
-            " [3 4 5 6]]\n",
-            "y =  [[6]\n",
-            " [7]]\n",
-            "x =  [[5 6 7 8]\n",
-            " [1 2 3 4]]\n",
-            "y =  [[9]\n",
-            " [5]]\n"
+            " [8]]\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QarXiXPlY1f1",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
