--- a/Sequences, Time Series and Prediction/S+P_Week_2_Lesson_2.ipynb
+++ b/Sequences, Time Series and Prediction/S+P_Week_2_Lesson_2.ipynb
@@ -129,9 +129,9 @@
         "\n",
         "def seasonal_pattern(season_time):\n",
         "    \"\"\"Just an arbitrary pattern, you can change it if you wish\"\"\"\n",
-        "    return np.where(season_time < 0.4,\n",
-        "                    np.cos(season_time * 2 * np.pi),\n",
-        "                    1 / np.exp(3 * season_time))\n",
+        "    return np.where(season_time < 0.4, # condition\n",
+        "                    np.cos(season_time * 2 * np.pi), # return of condition true\n",
+        "                    1 / np.exp(3 * season_time)) # return if condition false\n",
         "\n",
         "def seasonality(time, period, amplitude=1, phase=0):\n",
         "    \"\"\"Repeats the same pattern at each period\"\"\"\n",
